snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/maven-metadata.xml.sha512
7f8b96e2a8e007260b6a32984f432f68ced7ef3102d71b20335ef051388538e5c620fed3fd80c28abf428965b18e11ede6d47eaec07885475328ebc53cbdf62a